# realtime-core

./: CHARTER.md  Cargo.toml  DESIGN_SUMMARY.md  DOCKSIDE-EXAM.md  LICENSE  QUICK_REFERENCE.md  README.md
docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  USER_GUIDE.md
examples/: equilibrium_integration.rs
src/: error.rs  executor.rs  jitter.rs  lib.rs  scheduler.rs  timer.rs
